Fixed more cropper bugs related to scaling and image size, added zooming centred on crop bounds and improved marching ants.

--- a/edit/htdocs/css/cropper.css
+++ b/edit/htdocs/css/cropper.css
@@ -19,6 +19,10 @@ body {
 	overflow: hidden;
 }
 
+#cropper-image {
+	position: absolute;
+}
+
 #cropper-loader {
 	position: absolute;
 	width: 100%;
